--- a/style.css
+++ b/style.css
@@ -161,6 +161,8 @@ a:hover {
     color: #394b64;
 }
 .demo{
+    visibility: hidden;
+    opacity: 0;
     position: absolute;
     left: 35%;
 }
@@ -343,8 +345,11 @@ a:hover {
         color: #394b64;
     }
     .demo{
+        visibility: hidden;
+        opacity: 0;
         position: absolute;
         left: 35%;
+        transition: ease-in-out 0.3s;
     }
     .card:hover .aftermath   {
         visibility: visible ;
